--- a/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
+++ b/doc/errata/staging/2013-12-11-univention-s4-connector.yaml
@@ -2,10 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-s4-connector
-fix: 8.0.33-6.432.201312111725
+fix: 8.0.33-11.437.201401071145
 note:
 version: [0]
 desc: |
-  The sync mode is now configurable for every connector property such
-  as users, groups, containers etc. through UCR.
-bug: [33711]
+  This errata update fixes two issues:
+  * The sync mode is now configurable for every connector property such
+    as users, groups, containers etc. through UCR.
+  * fix a problem in the handling of non-english group names in
+    univention-ad-takeover.
+bug: [33711,33644]
